host/crates/tui/tests/snapshots/snapshots__reattached.snap
---
source: crates/tui/tests/snapshots.rs
expression: "press(&mut reattached, MEDIUM, \"\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4498  ● LIVE  ✎ 1 rule active         50 requests · 5.0 MB in · 33 KB out · 1 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.6 KB/s   ━ Sending 2.5 KB/s ─╮
│ 1.0 MB/s     ┊                                                      ⢀⡤⠤⠤⠤⠤⢤⣀⣀⣀⣀⡤⠤⠤⠤⠤⠤⠤⠤⠤⠤⣄⣀       ┊       ┊                              │
│              ┊                                                    ⢀⡴⠋              ┊      ⠈⠙⢦⡀    ┊       ┊                              │
│ 512 KB/s     ┊                                                   ⣠⠞                ┊         ⠙⢦⡀  ┊       ┊                              │
│              ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡴⠃                 ┊           ⠙⠒⠒⠒⠒⠒⠲⠤⢤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ │
│        0 ┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│              ⠐⠲⢤⣀⡀     ⢀⣀⣀⣀⣀    ⢀⣀⣀⣀   ⢀⣠⠤⣄              ⢀⡤⠤⠤⣄⣀⣀⣀⡤⠤⣄⡀   ⣀⡤⠤⠤⠤⣄⣀⣀⣀⣀ ┊              ┊    ⢀⡤⠖⠒⠒⠦⢤⣀⡀    ⣀⣠⠤⣄⣀ ⢀⣠⠤⠖⠒⠲⠤⣄⣀    ⢀ │
│ 4.0 KB/s     ┊   ⠉⠉⠉⠉⠉⠉⠉   ⠈⠙⠒⠒⠚⠉  ⠈⠉⠓⠋⠉  ⠈⢧    ⣠⠞⠉⠉⠙⠒⠦⠤⠞⠉          ⠙⠒⠒⠋⠁        ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠙⠲⣄⣀⡤⠤⢤⡀  ⣠⠞⠉  ┊    ⠉⠉⠉⠉⠉⠁   ⠈⠉⠉       ⠈⠓⠲⠴⠒⠋ │
│              ┊                             ⠈⢳⡀ ⡴⠃                                  ┊              ⠉⠳⠖⠃    ┊                              │
│ 8.0 KB/s     ┊                               ⠉⠉⠁                                   ┊              ┊       ┊                              │
│              00:00.000            00:05.000            00:10.000            00:15.000             00:20.000            00:25.000         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 50 ─ Connection ─ Thread ─ Rules ──────────────────────────────────────────────────────────────────────────────────────────────╮
│ Name                                                     Size  Type      Status         Time   Timeline                                  │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          282 ms                    ▕▎                       │
│ ! events                                                 17 B  json      200          1.04 s                     █▊                      │
│ notifications                                           306 B  json      200          1.77 s                     ▐█▉                     │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          134 ms                      ▕▏                     │
│ notifications                                           306 B  json      200          1.44 s                        ██▏                  │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          129 ms                         ▏                   │
│ events                                                   17 B  json      200          1.30 s                         ▐█▍                 │
│ notifications                                           306 B  json      200          1.45 s                          ▕█▉                │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          162 ms                           ▎                 │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          359 ms                             █               │
│ notifications                                                            detached     500 ms                             ▐▍              │
│ events                                                                   detached     164 ms                              ▏              │
│ token                                                   364 B  json      200          370 ms                                 ▕█         ▐│
│ sessions                                                290 B  json      200          1.78 s                                  ███▎      ▐│
│ notifications                                           306 B  json      200          1.38 s                                   ██       ▐│
│ events                                                   17 B  json      200          1.60 s                                    ██▎     ▐│
│ products?category=headphones&page=1                    1.0 KB  json      200          400 ms                                     ▐▏     ▐│
│ notifications                                           306 B  json      200          1.58 s                                     ▕██    ▐│
│ items                                                   149 B  json      200          2.54 s                                      ▐██▉  ▐│
│ notifications                                           306 B  json      200          1.64 s                                        ▐█▉ ▐│
│ events                                                   17 B  json      200          1.31 s                                         ▐█▎▐│
│ checkout                                                                 ···          1.26 s                                          ██▐│
│ notifications                                                            ···          500 ms                                           ▐ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   / filter   Space pause   m pin   y copy   e export   c collapse   s sort   ? help                  ⚠ studio inspector present
