host/crates/tui/tests/snapshots/snapshots__redacted_request_headers.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, init(), \"ll\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active                         images: half-blocks
 NETWORK  all app traffic · T switches                                                            ━ Receiving 2.9 KB/s   ━ Sending 1.4 KB/s
  16 KB/s                                                                              ┊
                                                                                       ┊            ⢠⠤⡀
                                                                                       ┊            ⢸ ⡇
                                                                                       ┊            ⡎ ⢣                 ⡤⡄
 8.0 KB/s                                                                              ┊            ⡇ ⢸            ⢀⣀⡀ ⢸ ⢣
                                                                                       ┊      ⣀⣀   ⢀⠇ ⠈⠉⠣⣀⡠⠒⢢  ⡔⠒⠤⠤⠊ ⢇ ⡜ ⢸⡖⠢⣀⣀⣀⣀    ⢸⠉⢣
                                                                                       ⢀⣀⡀ ⢀⣀⡰⠁⠒⠉⠙⢄⣸  ⢠⠤⠜⠉⢣  ⠓⠚⠃⠈⡆   ⠘⠒⢆ ⢸⡄    ⠈⠢⠤⢄⣀⡇ ⠈⠦⢄
        0                                                                              ⠐⠒⠑⠒⠊⠉⠁    ⠣⠤⠤⠤⠃   ⠈⠒⠒⠁   ⠈⠉⠑⠒⠃ ⠈⠒⠃⠧⠔⠉⠉⠢⠴⠁   ⠘⠒⠊⠉⠈⠒⠒
                                                                                       00:00.000            00:05.000             00:10.000
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Connection View   Thread View   Rules                               26 rows │  Overview   Response   Request   Call Stack               ✕
Name                      Size Type      Status         Time Timeline        │ POST /api/sdk/init HTTP/2
token                    391 B json      200          513 ms          █     ▐│
init                     316 B json      200          2.01 s          ▕▊    ▐│ Headers (8)
monitor                  302 B json      200          1.58 s          ▕▌    ▐│ Host: deepid.example.app
events                    17 B json      200          1.45 s           █    ▐│ Authorization: Bearer ‹redacted 296 chars›
u_4821.png              4.5 KB png       200          476 ms           ▏    ▐│ Content-Type: application/json; charset=utf-8
monitor                  302 B json      200          1.53 s           ▕▌   ▐│ Content-Length: 127
challenge                144 B json      200          386 ms           ▕    ▐│ X-Sdk-Version: 2.4.1
config                     0 B           302           61 ms            ▏   ▐│ X-Request-Id: 4ea4a7b6-4987-4b4b-a435-32b9598c530a
↪ config.json            106 B json      200          195 ms            ▏   ▐│ Accept-Encoding: gzip
attest                   180 B json      200          2.75 s            █▌  ▐│ User-Agent: okhttp/4.12.0
metrics                    6 B protobuf  200          224 ms            ▏   ▐│
monitor                  302 B json      200          1.41 s            ▕▌  ▐│ Body  JSON, 127 B  [parsed · p: source]
events                    17 B json      200          1.14 s            ▕▌  ▐│ {
liveness-model-v3.j…     150 B json      404          346 ms             █  ▐│   "sdkVersion": "2.4.1",
enroll                    72 B json      200          2.08 s             ▐█ ▐│   "platform": "android",
documents                 93 B json      200          515 ms             ▕  ▐│   "apiLevel": 36,
monitor                  302 B json      200          1.50 s             ▕▌ ▐│   "device": {
report                   305 B html      500          219 ms              ▏ ▐│     "model": "Pixel 8",
lookup?fields=count…     101 B json      200          507 ms              █ ▐│     "manufacturer": "Google"
monitor                  302 B json      200          1.49 s              ▕▌▐│   },
status?sessionId=se…     263 B json      200          326 ms              ▕ ▐│   "locale": "en-IN"
threshold                                ···          1.90 s               █▐│ }
events                    17 B json      200          970 ms               ▌▐│
status?sessionId=se…     263 B json      200          174 ms               ▏▐│
fonts.json                               canceled     380 ms               ▏ │
 26 requests  13 KB in  18 KB out  1 failed  0 dropped  ⚠ studio inspector present                                                  ? help
