host/crates/tui/tests/snapshots/snapshots__rule_delivered.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(40.0, MEDIUM, modified(), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active          60 requests · 5.0 MB in · 42 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 2.2 KB/s   ━ Sending 1.5 KB/s ─╮
│ 1.0 MB/s                             ┊                                                                                                   │
│                       ┏━━┓┏━━┓   ┏━┓ ┏━━┓┏━━┓                                                                                            │
│                      ┏┛  ┗┛  ┗━━━┛ ┗━┛  ┗┛  ┗━┓                                                                                          │
│                     ┏┛               ┊        ┗┓                                                                                         │
│ 512 KB/s            ┃                ┊         ┗┓                                                                                        │
│                     ┃                ┊          ┃                                                                                        │
│                     ┃                ┊          ┃   ┏━┓                                                                                  │
│                     ┃                ┊          ┗━━━┛ ┗━┓                                                                                │
│        0 ━━━━━━━━━━━┛━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │
│          00:10.000            00:15.000             00:20.000            00:25.000            00:30.000            00:35.000             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 60 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ status?sessionId=session_15… ─ Overview ─ Response ──── ✕ ─╮
│ Name                    Size Type      Status         Time Timeline       ││ HTTP/2 200 OK                                               │
│ monitor                302 B json      200          1.49 s ▌              ││ ✎ changed by rule "Force verdict pass" · o: original        │
│ status?sessionId=…     263 B json      200          326 ms                ││                                                             │
│ threshold                              failed       10.0 s ████▊          ││ Headers (6)                                                 │
│ events                  17 B json      200          970 ms ▏              ││ date: Tue, 29 Sep 2026 05:10:21 GMT                         │
│ status?sessionId=…     263 B json      200          174 ms ▏              ││ content-type: application/json; charset=utf-8               │
│ fonts.json                             canceled     380 ms ▏              ││ x-request-id: 20924730-8f2e-41f6-a5fb-d9b5d4fea81d          │
│ monitor                302 B json      200          1.44 s ▕▍             ││ server: envoy                                               │
│ face-liveness-v3.…    5.0 MB binary    200          6.38 s  ███          ▐││ Content-Length: 261                                         │
│ status?sessionId=…     263 B json      200          284 ms  ▏            ▐││ Cache-Control: no-store                                     │
│ monitor                302 B json      200          1.56 s  ▐▍           ▐││                                                             │
│ ! events                17 B json      200          971 ms  ▕▍           ▐││ Body  JSON, 261 B  [parsed · p: source]                     │
│ status?sessionId=…     263 B json      200          358 ms  ▕▏           ▐││ {                                                           │
│ monitor                302 B json      200          1.72 s   ▐▍          ▐││   "ok": true,                                               │
│ status?sessionId=…     263 B json      200          381 ms   ▏           ▐││   "sessionId": "session_15bce3a5a963c9fde0ebe700e9d76981",  │
│ status?sessionId=…     263 B json      200          225 ms    ▏          ▐││   "deepid": "-fWdPR-silxdhEdA5s951RnzPITRjkkelext-Qs",      │
│ events                  17 B json      200          1.13 s    ▌           ││   "mobile": null,                                           │
│ monitor                302 B json      200          1.38 s    ▐▏          ││   "status": "complete",                                     │
│ status?sessionId=…     263 B json      200          259 ms     ▏          ││   "verdict": "pass",                                        │
│ monitor                302 B json      200          1.67 s     ▐▎         ││   "riskScore": 0,                                           │
│ status?sessionId=…     263 B json      200          158 ms     ▏          ││   "createdAt": "2026-09-29T05:04:51.000Z",                  │
│ events                  17 B json      200          995 ms      ▌         ││   "completedAt": null,                                      │
│ monitor                302 B json      200          1.65 s      ▐▏        ││   "enrollmentSim": null                                     │
│ ✎ status?sessionI…     264 B json      200          327 ms      ▏         ││ }                                                           │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
